Fri Feb  4 14:33:25 2005  Minero Aoki  <aamine@loveruby.net>

	* ext/ripper/lib/ripper/filter.rb: ripper/tokenizer ->
	  ripper/lexer. [ruby-dev:25632]

Fri Feb  4 00:24:15 2005  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss: supported Image module.
	  http://web.resource.org/rss/1.0/modules/image/

Thu Feb  3 23:42:36 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_close, strio_close_read, strio_close_write):
	  should return nil instead of self as well as IO.  [ruby-dev:25623]

	* ext/stringio/stringio.c (strio_extend, strio_putc): fill with zero
	  extended portion.  [ruby-dev:25626]

Wed Feb  3 03:31:20 2005  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: follow original v 1.57

	* ext/nkf/nkf-utf8/utf8tbl.c: follow original v 1.8

	* ext/nkf/nkf-utf8/config.h: follow original v 1.7

Wed Feb  2 23:52:53 2005  sheepman  <sheepman@tcn.zaq.ne.jp>

	* ext/stringio/stringio.c (strio_truncate): should MEMZERO an extended
	  part.  [ruby-dev:25618]

Wed Feb  2 21:56:01 2005  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb (RSS::Element#convert): added.

	* lib/rss/rss.rb: convert -> need_convert.

	* lib/rss/1.0.rb: ditto.

	* lib/rss/0.9.rb: ditto.

	* lib/rss/2.0.rb: ditto.

	* lib/rss/trackback.rb: ditto.

Wed Feb  2 03:30:58 2005  Minero Aoki  <aamine@loveruby.net>

	* ext/ripper/lib/ripper/tokenizer.rb -> lexer.rb.

	* ext/ripper/lib/ripper/lexer.rb: new method Ripper.slice.
	  [experimental]

	* ext/ripper/lib/ripper/sexp.rb: new file. [experimental]

	* ext/ripper/lib/ripper.rb: require ripper/lexer and ripper/sexp.

Tue Feb  1 21:49:24 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb (DRb::DRbObject#respond_to?): check marshal_dump and
	_dump.

Tue Feb  1 00:20:23 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, configure.in: made EXTOUT configurable.

	* ext/extmk.rb (extmake), lib/mkmf.rb: keep topdir as relative style.
