@@ -1,3 +1,8 @@
+Fri Feb  4 18:44:35 2005  Minero Aoki  <aamine@loveruby.net>
+
+	* ext/ripper/lib/ripper/lexer.rb: last Lexer fix was incomplete;
+	  test all green.
+
 Fri Feb  4 14:33:25 2005  Minero Aoki  <aamine@loveruby.net>
 
 	* ext/ripper/lib/ripper/filter.rb: ripper/tokenizer ->
